syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "olsh.backend.api_gateway.grpc.proto";
option java_outer_classname = "UserProto";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    int64 user_id = 1;
}

message GetUserResponse {
    int64 id = 1;
    string username = 2;
    string name = 3;
    string surname = 4;
    string email = 5;
}